--- a/css/style.css
+++ b/css/style.css
@@ -14,4 +14,70 @@ html, body, h1, h2, h3, p {
 
 body {
   font-family: "Karla", sans-serif;
+  font-size: 1rem;
+}
+
+header {
+  margin: 0 24px;
+  margin-top: 32px;
+  margin-bottom: 37px;
+}
+
+.header h1 {
+  margin-bottom: 29px;
+  font-size: 21px;
+  color: hsl(179deg, 62%, 43%);
+}
+.header__subtitle {
+  margin-bottom: 26px;
+  padding-right: 19px;
+  font-size: 1rem;
+  color: hsl(71deg, 73%, 54%);
+  line-height: 22px;
+}
+.header__description {
+  color: hsl(218deg, 22%, 67%);
+  line-height: 27px;
+}
+
+main {
+  padding: 0 24px;
+  padding-top: 28px;
+  padding-bottom: 24px;
+  background-color: #2BB3B1;
+}
+
+.main__header {
+  margin-bottom: 22px;
+  color: hsl(204deg, 43%, 93%);
+}
+.main__price {
+  margin-bottom: 1rem;
+  font-weight: 300;
+  color: hsla(204deg, 43%, 93%, 0.7);
+}
+.main__dollar {
+  margin-right: 10px;
+  font-size: 29px;
+  font-weight: 700;
+  color: white;
+}
+.main__description {
+  margin-bottom: 34px;
+  color: hsl(204deg, 43%, 93%);
+}
+
+.button {
+  border: none;
+  border-radius: 5px;
+  width: 100%;
+  height: 48px;
+  font-size: 1rem;
+  font-weight: 700;
+  color: white;
+  background-color: hsl(71deg, 73%, 54%);
+}
+
+footer {
+  background-color: #4ABEBD;
 }/*# sourceMappingURL=style.css.map */
