--- a/sass/_globals.scss
+++ b/sass/_globals.scss
@@ -1,3 +1,5 @@
+@use 'mixins' as m; 
+
 html{
     font-size: 100%;
     box-sizing: border-box;
@@ -13,6 +15,18 @@ html,body,h1,h2,h3,p{
 }
 
 body{
+    margin: 72px 32px;
     font-family: 'Karla', sans-serif;
     font-size: 1rem;
+    background-color: #E6EFF6;
+    @include m.breakpoints-up(large){
+        margin: 120px 346px;
+        display: flex;
+        max-height: 100vh;
+        justify-content: center;
+        align-items: center;
+        flex-direction: row;
+        flex-wrap: wrap;
+
+    }
 }
