--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,10 +1,20 @@
 
 @use 'variables' as v;
+@use 'mixins' as m;
 
 header{
-    margin: 0 24px;
-    margin-top: 32px;
-    margin-bottom: 37px;
+    // flex: 1 1 50%;
+    padding: 0 24px;
+    padding-top: 32px;
+    padding-bottom: 37px;
+    background-color: #fff;
+    @include m.breakpoints-up(large){
+        padding: 46px 0;
+        padding-right: 67px;
+        padding-left: 42px;
+        max-width: 637px;
+        height: 246px;
+    }
 }
 
 .header{
@@ -12,14 +22,21 @@ header{
         margin-bottom: 29px;
         font-size: 21px;
         color: v.$cl-primary-cyan;
+        @include m.breakpoints-up(large){
+            margin-bottom: 28px;
+        }
     }
 
     &__subtitle{
         margin-bottom: 26px;
         padding-right: 19px;
         font-size: 1rem;
+        font-weight: 700;
         color: v.$cl-primary-br-yellow;
         line-height: 22px;
+        @include m.breakpoints-up(large){
+            margin-bottom: 28px;
+        }
     }
 
     &__description{
